Поправлены шаблоны для nginx, поправлен dockerfile для php8.1

--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -6,8 +6,7 @@ services:
     container_name: nginx
     hostname: nginx
     networks:
-      server-network:
-        aliases:
+      - server-network
     logging:
       driver: json-file
       options:
