--- a/php/8.1/Dockerfile
+++ b/php/8.1/Dockerfile
@@ -5,8 +5,9 @@ COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr
 
 RUN install-php-extensions pdo pdo_mysql exif gettext intl
 RUN install-php-extensions xsl shmop sockets sysvmsg sysvsem sysvshm
-RUN install-php-extensions opcache zip xdebug redis
-RUN install-php-extensions dom xml xmlwriter fileinfo tokenizer
+RUN install-php-extensions opcache zip
+RUN install-php-extensions dom xmlwriter fileinfo tokenizer
+# RUN install-php-extensions redis
 RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev libjpeg-turbo-dev && \
   docker-php-ext-configure gd \
     --with-freetype \
@@ -14,6 +15,21 @@ RUN apk add --no-cache freetype libpng libjpeg-turbo freetype-dev libpng-dev lib
   NPROC=$(grep -c ^processor /proc/cpuinfo 2>/dev/null || 1) && \
   docker-php-ext-install -j$(nproc) gd && \
   apk del --no-cache freetype-dev libpng-dev libjpeg-turbo-dev
+
+RUN mkdir -p /usr/src/php/ext/redis; \
+  curl -fsSL https://pecl.php.net/get/redis --ipv4 | tar xvz -C "/usr/src/php/ext/redis" --strip 1; \
+  docker-php-ext-install redis;
+
+# RUN curl 'https://pecl.php.net/get/redis-5.3.7.tgz' -o redis-5.3.7.tgz \
+#     && pecl install redis-5.3.7.tgz \
+#     && rm -rf redis-5.3.7.tgz \
+#     && rm -rf /tmp/pear \
+#     && docker-php-ext-enable redis
+ 
+# RUN curl 'https://pecl.php.net/get/xdebug-3.1.6.tgz' -o xdebug-3.1.6.tgz \
+#     && pecl install xdebug-3.1.6.tgz \
+#     && rm -rf xdebug-3.1.6.tgz \
+#     && docker-php-ext-enable xdebug
 
 #RUN apk add php8-pdo_mysql php8-pdo php8-exif php8-gettext php8-intl
 #RUN apk add php8-xsl php8-shmop
